# gluco-project

./: .cursorrules  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.development  README.md  env.prod.js  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: backend-ci.yml  dispatcher.yml  mini-app-ci.yaml  pull-request.yml  wx-client-ci.yml
alembic/versions/: 006def0142cd_add_user_activation_token.py  0d44b6a2d10b_fresh_initial_migration.py  3aea50be8a27_convert_portion_to_float.py  4d410bf1fb1a_rename_and_transform_nutrient_columns.py  6efa31d22699_make_subscription_id_nullable.py  7a879595a308_merge_heads.py  bd31f780a336_remove_amount_unit_calories_columns.py  fca73b4d5834_modify_subscription_unique_constraint.py
app/: dependencies.py  main.py
app/config/: subscription_plans.py
app/data/: ingredients.json  tips.txt
app/database/: database.py  subscription.py
app/models/: nutrition_models.py  task_models.py  user_models.py
app/routers/: auth.py  meals.py  users.py
app/schemas/: storage.py  user_schemas.py
app/services/: payment_service.py
app/utils/: auth.py  background_tasks.py  invitation_code.py  (+1 more)
backend/: CLAUDE.md  docker-compose.yml  requirements.txt
docs/: authentication.md  request_methods.md  subscription-system-design.md
tests/: test_api.py  test_gpt_client.py  test_migrations.py  test_models.py  test_subscription.py
utils/: subscription-mock.js  util.js
wx-client/: CLAUDE.md  app.js  app.json  app.wxss  convert-svg-to-png.js  env.dev.js  project.config.json
(+69 files in other folders)
